# py-rust-mandel

./: Cargo.toml  README.md  mandelbrot.ipynb  pyproject.toml  requirements.txt
src/: lib.rs  simd.rs  simd_par.rs
