[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mandelbrot"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.2"
rayon = "^1.0"
packed_simd = "0.3.9"
ndarray = "0.15.6"
numpy = "^0.18.0"